--- a/CW/app/src/main/res/drawable/icon_on_off.xml
+++ b/CW/app/src/main/res/drawable/icon_on_off.xml
@@ -1,17 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
     <item
-        android:drawable="@drawable/fruit_pressed"
+        android:drawable="@drawable/icon_on_pressed"
         android:state_checked="true"
         android:state_pressed="true" />
     <item
-        android:drawable="@drawable/seasoning_on"
+        android:drawable="@drawable/icon_on_normal"
         android:state_checked="true" />
     <item
-        android:drawable="@drawable/seasoning_pressed"
+        android:drawable="@drawable/icon_off_pressed"
         android:state_checked="false"
         android:state_pressed="true" />
     <item
-        android:drawable="@drawable/seasoning_off"
+        android:drawable="@drawable/icon_off_normal"
         android:state_checked="false" />
 </selector>
