--- a/CW/app/src/main/res/layout/main.xml
+++ b/CW/app/src/main/res/layout/main.xml
@@ -46,20 +46,92 @@
         android:layout_alignBottom="@+id/fruit"
         android:layout_centerHorizontal="true" />
 
-    <ToggleButton android:id="@+id/seasoning" android:layout_width="100dp" android:layout_height="100dp"
+    <ToggleButton android:id="@+id/seasoning"
+        android:layout_width="100dp"
+        android:layout_height="100dp"
         android:background="@drawable/button_background"
-        android:gravity="center_vertical" android:textOn="Приправы" android:textOff="Приправы"
-        android:textSize="15dp" android:textAlignment="center" android:textColor="@color/color"
-        android:onClick="onToggleButtonClick" android:checked="false" android:layout_alignBottom="@+id/vegetables"
-        android:layout_alignParentRight="true" android:layout_alignParentEnd="true" />
+        android:gravity="center_vertical"
+        android:textOn="Приправы"
+        android:textOff="Приправы"
+        android:textSize="15dp"
+        android:textAlignment="center"
+        android:textColor="@color/color"
+        android:onClick="onToggleButtonClick"
+        android:checked="false"
+        android:layout_alignBottom="@+id/vegetables"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentEnd="true" />
 
-    <ToggleButton android:id="@+id/dairy" android:layout_width="100dp" android:layout_height="100dp"
-        android:background="@drawable/button_background" android:drawableTop="@drawable/fruit_on_off"
-        android:gravity="center_vertical" android:textOn="Молочные продукты" android:textOff="Молочные продукты"
-        android:textSize="14dp" android:textColor="@color/color" android:onClick="onToggleButtonClick"
-        android:checked="false" android:layout_marginTop="42dp" android:layout_below="@+id/fruit"
-        android:layout_alignRight="@+id/next" android:layout_alignEnd="@+id/next"
+    <ToggleButton android:id="@+id/dairy"
+        android:layout_width="100dp"
+        android:layout_height="100dp"
+        android:background="@drawable/button_background"
+        android:drawableTop="@drawable/fruit_on_off"
+        android:gravity="center_vertical"
+        android:textOn="Молочные продукты"
+        android:textOff="Молочные продукты"
+        android:textSize="14dp"
+        android:textColor="@color/color"
+        android:onClick="onToggleButtonClick"
+        android:checked="false"
+        android:layout_marginTop="42dp"
+        android:layout_below="@+id/fruit"
+        android:layout_alignRight="@+id/next"
+        android:layout_alignEnd="@+id/next"
         android:textAlignment="center" />
+
+    <ToggleButton
+        android:id="@+id/supplements"
+        android:layout_width="100dp"
+        android:layout_height="100dp"
+        android:background="@drawable/button_background"
+        android:drawableTop="@drawable/fruit_on_off"
+        android:gravity="center_vertical"
+        android:textOn="Пищевые добавки"
+        android:textOff="Пищевые добавки"
+        android:textSize="10dp"
+        android:textColor="@color/color"
+        android:onClick="onToggleButtonClick"
+        android:checked="false"
+        android:textAlignment="center"
+        android:layout_alignTop="@+id/dairy"
+        android:layout_alignLeft="@+id/vegetables"
+        android:layout_alignStart="@+id/vegetables" />
+
+    <ToggleButton
+        android:id="@+id/nuts"
+        android:layout_width="100dp"
+        android:layout_height="100dp"
+        android:background="@drawable/button_background"
+        android:gravity="center_vertical"
+        android:textOn="Орехи"
+        android:textOff="Орехи"
+        android:textSize="15dp"
+        android:textAlignment="center"
+        android:textColor="@color/color"
+        android:onClick="onToggleButtonClick"
+        android:checked="false"
+        android:layout_alignTop="@+id/supplements"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentEnd="true" />
+
+    <ToggleButton
+        android:id="@+id/meat"
+        android:layout_width="100dp"
+        android:layout_height="100dp"
+        android:background="@drawable/button_background"
+        android:gravity="center_vertical"
+        android:textOn="Мясо"
+        android:textOff="Мясо"
+        android:textSize="15dp"
+        android:textAlignment="center"
+        android:textColor="@color/color"
+        android:onClick="onToggleButtonClick"
+        android:checked="false"
+        android:layout_below="@+id/dairy"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:layout_marginTop="35dp" />
 
     <Button
         style="?android:attr/buttonStyleSmall"
