--- a/CW/app/src/main/res/layout/meat.xml
+++ b/CW/app/src/main/res/layout/meat.xml
@@ -17,8 +17,8 @@
             android:background="@drawable/button_background"
             android:drawableTop="@drawable/fruit_ananas"
             android:gravity="center_vertical"
-            android:textOn="Горчица"
-            android:textOff="Горчица"
+            android:textOn="Бекон "
+            android:textOff="Бекон "
             android:textSize="14dp"
             android:textAlignment="center"
             android:textColor="@color/color"
@@ -35,8 +35,8 @@
             android:background="@drawable/button_background"
             android:drawableTop="@drawable/fruit_orange"
             android:gravity="center_vertical"
-            android:textOn="Корица"
-            android:textOff="Корица"
+            android:textOn="Ветчина"
+            android:textOff="Ветчина"
             android:textSize="14dp"
             android:textAlignment="center"
             android:textColor="@color/color"
@@ -51,8 +51,8 @@
             android:background="@drawable/button_background"
             android:drawableTop="@drawable/fruit_banana"
             android:gravity="center_vertical"
-            android:textOn="Паприка"
-            android:textOff="Паприка"
+            android:textOn="Говядина"
+            android:textOff="Говядина"
             android:textSize="14dp"
             android:textAlignment="center"
             android:textColor="@color/color"
@@ -68,8 +68,8 @@
             android:background="@drawable/button_background"
             android:drawableTop="@drawable/fruit_grape"
             android:gravity="center_vertical"
-            android:textOn="Перец"
-            android:textOff="Перец"
+            android:textOn="Грудинка"
+            android:textOff="Грудинка"
             android:textSize="14dp"
             android:textAlignment="center"
             android:textColor="@color/color"
@@ -87,8 +87,8 @@
             android:background="@drawable/button_background"
             android:drawableTop="@drawable/fruit_dried_apricot"
             android:gravity="center_vertical"
-            android:textOn="Специи"
-            android:textOff="Специи"
+            android:textOn="Колбаса"
+            android:textOff="Колбаса"
             android:textSize="14dp"
             android:textAlignment="center"
             android:textColor="@color/color"
@@ -105,8 +105,8 @@
             android:background="@drawable/button_background"
             android:drawableTop="@drawable/fruit_lemon"
             android:gravity="center_vertical"
-            android:textOn="Тимьян"
-            android:textOff="Тимьян"
+            android:textOn="Курица"
+            android:textOff="Курица"
             android:textSize="14dp"
             android:textAlignment="center"
             android:textColor="@color/color"
@@ -123,8 +123,8 @@
             android:background="@drawable/button_background"
             android:drawableTop="@drawable/fruit_tangerines"
             android:gravity="center_vertical"
-            android:textOn="Хрен"
-            android:textOff="Хрен"
+            android:textOn="Сало"
+            android:textOff="Сало"
             android:textSize="14dp"
             android:textAlignment="center"
             android:textColor="@color/color"
@@ -135,7 +135,6 @@
             android:layout_alignParentStart="true"
             android:layout_marginTop="35dp" />
 
-
         <ToggleButton
             android:id="@+id/m_72"
             android:layout_width="100dp"
@@ -143,8 +142,8 @@
             android:background="@drawable/button_background"
             android:drawableTop="@drawable/fruit_tangerines"
             android:gravity="center_vertical"
-            android:textOn="Шафран"
-            android:textOff="Шафран"
+            android:textOn="Свинина"
+            android:textOff="Свинина"
             android:textSize="14dp"
             android:textAlignment="center"
             android:textColor="@color/color"
@@ -154,6 +153,60 @@
             android:layout_alignLeft="@+id/m_69"
             android:layout_alignStart="@+id/m_69" />
 
+        <ToggleButton
+            android:id="@+id/m_73"
+            android:layout_width="100dp"
+            android:layout_height="100dp"
+            android:background="@drawable/button_background"
+            android:drawableTop="@drawable/fruit_tangerines"
+            android:gravity="center_vertical"
+            android:textOn="Телятина"
+            android:textOff="Телятина"
+            android:textSize="14dp"
+            android:textAlignment="center"
+            android:textColor="@color/color"
+            android:onClick="onToggleButtonClick"
+            android:checked="false"
+            android:layout_alignTop="@+id/m_72"
+            android:layout_alignLeft="@+id/m_70"
+            android:layout_alignStart="@+id/m_70" />
+
+        <ToggleButton
+            android:id="@+id/m_74"
+            android:layout_width="100dp"
+            android:layout_height="100dp"
+            android:background="@drawable/button_background"
+            android:drawableTop="@drawable/fruit_tangerines"
+            android:gravity="center_vertical"
+            android:textOn="Фарш"
+            android:textOff="Фарш"
+            android:textSize="14dp"
+            android:textAlignment="center"
+            android:textColor="@color/color"
+            android:onClick="onToggleButtonClick"
+            android:checked="false"
+            android:layout_below="@+id/m_71"
+            android:layout_alignParentLeft="true"
+            android:layout_alignParentStart="true"
+            android:layout_marginTop="35dp" />
+
+        <ToggleButton
+            android:id="@+id/m_75"
+            android:layout_width="100dp"
+            android:layout_height="100dp"
+            android:background="@drawable/button_background"
+            android:drawableTop="@drawable/fruit_tangerines"
+            android:gravity="center_vertical"
+            android:textOn="Язык"
+            android:textOff="Язык"
+            android:textSize="14dp"
+            android:textAlignment="center"
+            android:textColor="@color/color"
+            android:onClick="onToggleButtonClick"
+            android:checked="false"
+            android:layout_alignTop="@+id/m_74"
+            android:layout_alignLeft="@+id/m_73"
+            android:layout_alignStart="@+id/m_73" />
         <Button
             style="?android:attr/buttonStyleSmall"
             android:layout_width="150dp"
