--- a/CW/app/src/main/res/layout/nuts.xml
+++ b/CW/app/src/main/res/layout/nuts.xml
@@ -11,32 +11,30 @@
         android:fillViewport="true"
         >
         <ToggleButton
-            android:id="@+id/m_65"
+            android:id="@+id/n_60"
             android:layout_width="100dp"
             android:layout_height="100dp"
             android:background="@drawable/button_background"
             android:drawableTop="@drawable/fruit_ananas"
             android:gravity="center_vertical"
-            android:textOn="Горчица"
-            android:textOff="Горчица"
+            android:textOn="Каштаны"
+            android:textOff="Каштаны"
             android:textSize="14dp"
             android:textAlignment="center"
             android:textColor="@color/color"
             android:onClick="onToggleButtonClick"
             android:checked="false"
-            android:layout_alignParentTop="true"
-            android:layout_alignParentLeft="true"
-            android:layout_alignParentStart="true" />
+            />
 
         <ToggleButton
-            android:id="@+id/m_66"
+            android:id="@+id/n_61"
             android:layout_width="100dp"
             android:layout_height="100dp"
             android:background="@drawable/button_background"
             android:drawableTop="@drawable/fruit_orange"
             android:gravity="center_vertical"
-            android:textOn="Корица"
-            android:textOff="Корица"
+            android:textOn="Миндаль"
+            android:textOff="Миндаль"
             android:textSize="14dp"
             android:textAlignment="center"
             android:textColor="@color/color"
@@ -45,14 +43,14 @@
             android:layout_centerHorizontal="true" />
 
         <ToggleButton
-            android:id="@+id/m_67"
+            android:id="@+id/n_62"
             android:layout_width="100dp"
             android:layout_height="100dp"
             android:background="@drawable/button_background"
             android:drawableTop="@drawable/fruit_banana"
             android:gravity="center_vertical"
-            android:textOn="Паприка"
-            android:textOff="Паприка"
+            android:textOn="Грецкие"
+            android:textOff="Грецкие"
             android:textSize="14dp"
             android:textAlignment="center"
             android:textColor="@color/color"
@@ -62,97 +60,41 @@
             android:layout_alignParentEnd="true" />
 
         <ToggleButton
-            android:id="@+id/m_68"
+            android:id="@+id/n_63"
             android:layout_width="100dp"
             android:layout_height="100dp"
             android:background="@drawable/button_background"
             android:drawableTop="@drawable/fruit_grape"
             android:gravity="center_vertical"
-            android:textOn="Перец"
-            android:textOff="Перец"
+            android:textOn="Кедровые"
+            android:textOff="Кедровые"
             android:textSize="14dp"
             android:textAlignment="center"
             android:textColor="@color/color"
             android:onClick="onToggleButtonClick"
             android:checked="false"
-            android:layout_below="@+id/m_65"
-            android:layout_alignParentLeft="true"
-            android:layout_alignParentStart="true"
+            android:layout_below="@+id/n_60"
+            android:layout_alignLeft="@+id/n_60"
+            android:layout_alignStart="@+id/n_60"
             android:layout_marginTop="35dp" />
 
         <ToggleButton
-            android:id="@+id/m_69"
+            android:id="@+id/n_64"
             android:layout_width="100dp"
             android:layout_height="100dp"
             android:background="@drawable/button_background"
             android:drawableTop="@drawable/fruit_dried_apricot"
             android:gravity="center_vertical"
-            android:textOn="Специи"
-            android:textOff="Специи"
+            android:textOn="Мускатные"
+            android:textOff="Мускатные"
             android:textSize="14dp"
             android:textAlignment="center"
             android:textColor="@color/color"
             android:onClick="onToggleButtonClick"
             android:checked="false"
-            android:layout_alignTop="@+id/m_68"
-            android:layout_alignLeft="@+id/m_66"
-            android:layout_alignStart="@+id/m_66" />
-
-        <ToggleButton
-            android:id="@+id/m_70"
-            android:layout_width="100dp"
-            android:layout_height="100dp"
-            android:background="@drawable/button_background"
-            android:drawableTop="@drawable/fruit_lemon"
-            android:gravity="center_vertical"
-            android:textOn="Тимьян"
-            android:textOff="Тимьян"
-            android:textSize="14dp"
-            android:textAlignment="center"
-            android:textColor="@color/color"
-            android:onClick="onToggleButtonClick"
-            android:checked="false"
-            android:layout_alignTop="@+id/m_69"
-            android:layout_alignLeft="@+id/m_67"
-            android:layout_alignStart="@+id/m_67" />
-
-        <ToggleButton
-            android:id="@+id/m_71"
-            android:layout_width="100dp"
-            android:layout_height="100dp"
-            android:background="@drawable/button_background"
-            android:drawableTop="@drawable/fruit_tangerines"
-            android:gravity="center_vertical"
-            android:textOn="Хрен"
-            android:textOff="Хрен"
-            android:textSize="14dp"
-            android:textAlignment="center"
-            android:textColor="@color/color"
-            android:onClick="onToggleButtonClick"
-            android:checked="false"
-            android:layout_below="@+id/m_68"
-            android:layout_alignParentLeft="true"
-            android:layout_alignParentStart="true"
-            android:layout_marginTop="35dp" />
-
-
-        <ToggleButton
-            android:id="@+id/m_72"
-            android:layout_width="100dp"
-            android:layout_height="100dp"
-            android:background="@drawable/button_background"
-            android:drawableTop="@drawable/fruit_tangerines"
-            android:gravity="center_vertical"
-            android:textOn="Шафран"
-            android:textOff="Шафран"
-            android:textSize="14dp"
-            android:textAlignment="center"
-            android:textColor="@color/color"
-            android:onClick="onToggleButtonClick"
-            android:checked="false"
-            android:layout_alignTop="@+id/m_71"
-            android:layout_alignLeft="@+id/m_69"
-            android:layout_alignStart="@+id/m_69" />
+            android:layout_alignTop="@+id/n_63"
+            android:layout_alignParentRight="true"
+            android:layout_alignParentEnd="true" />
 
         <Button
             style="?android:attr/buttonStyleSmall"
