--- a/CW/app/src/main/res/layout/supplements.xml
+++ b/CW/app/src/main/res/layout/supplements.xml
@@ -17,8 +17,8 @@
             android:background="@drawable/button_background"
             android:drawableTop="@drawable/fruit_ananas"
             android:gravity="center_vertical"
-            android:textOn="Горчица"
-            android:textOff="Горчица"
+            android:textOn="Ванилин"
+            android:textOff="Ванилин"
             android:textSize="14dp"
             android:textAlignment="center"
             android:textColor="@color/color"
@@ -35,8 +35,8 @@
             android:background="@drawable/button_background"
             android:drawableTop="@drawable/fruit_orange"
             android:gravity="center_vertical"
-            android:textOn="Корица"
-            android:textOff="Корица"
+            android:textOn="Ваниль"
+            android:textOff="Ваниль"
             android:textSize="14dp"
             android:textAlignment="center"
             android:textColor="@color/color"
@@ -51,8 +51,8 @@
             android:background="@drawable/button_background"
             android:drawableTop="@drawable/fruit_banana"
             android:gravity="center_vertical"
-            android:textOn="Паприка"
-            android:textOff="Паприка"
+            android:textOn="Вассаби"
+            android:textOff="Вассаби"
             android:textSize="14dp"
             android:textAlignment="center"
             android:textColor="@color/color"
@@ -68,8 +68,8 @@
             android:background="@drawable/button_background"
             android:drawableTop="@drawable/fruit_grape"
             android:gravity="center_vertical"
-            android:textOn="Перец"
-            android:textOff="Перец"
+            android:textOn="Дрожжи"
+            android:textOff="Дрожжи"
             android:textSize="14dp"
             android:textAlignment="center"
             android:textColor="@color/color"
@@ -87,8 +87,8 @@
             android:background="@drawable/button_background"
             android:drawableTop="@drawable/fruit_dried_apricot"
             android:gravity="center_vertical"
-            android:textOn="Специи"
-            android:textOff="Специи"
+            android:textOn="Желатин"
+            android:textOff="Желатин"
             android:textSize="14dp"
             android:textAlignment="center"
             android:textColor="@color/color"
@@ -105,8 +105,8 @@
             android:background="@drawable/button_background"
             android:drawableTop="@drawable/fruit_lemon"
             android:gravity="center_vertical"
-            android:textOn="Тимьян"
-            android:textOff="Тимьян"
+            android:textOn="Лимонная кислота"
+            android:textOff="Лимонная кислота"
             android:textSize="14dp"
             android:textAlignment="center"
             android:textColor="@color/color"
@@ -123,8 +123,8 @@
             android:background="@drawable/button_background"
             android:drawableTop="@drawable/fruit_tangerines"
             android:gravity="center_vertical"
-            android:textOn="Хрен"
-            android:textOff="Хрен"
+            android:textOn="Мак"
+            android:textOff="Мак"
             android:textSize="14dp"
             android:textAlignment="center"
             android:textColor="@color/color"
@@ -135,7 +135,6 @@
             android:layout_alignParentStart="true"
             android:layout_marginTop="35dp" />
 
-
         <ToggleButton
             android:id="@+id/m_72"
             android:layout_width="100dp"
@@ -143,8 +142,8 @@
             android:background="@drawable/button_background"
             android:drawableTop="@drawable/fruit_tangerines"
             android:gravity="center_vertical"
-            android:textOn="Шафран"
-            android:textOff="Шафран"
+            android:textOn="Мука"
+            android:textOff="Мука"
             android:textSize="14dp"
             android:textAlignment="center"
             android:textColor="@color/color"
@@ -153,6 +152,79 @@
             android:layout_alignTop="@+id/m_71"
             android:layout_alignLeft="@+id/m_69"
             android:layout_alignStart="@+id/m_69" />
+
+        <ToggleButton
+            android:id="@+id/m_73"
+            android:layout_width="100dp"
+            android:layout_height="100dp"
+            android:background="@drawable/button_background"
+            android:drawableTop="@drawable/fruit_tangerines"
+            android:gravity="center_vertical"
+            android:textOn="Разрыхлитель"
+            android:textOff="Разрыхлитель"
+            android:textSize="14dp"
+            android:textAlignment="center"
+            android:textColor="@color/color"
+            android:onClick="onToggleButtonClick"
+            android:checked="false"
+            android:layout_alignTop="@+id/m_72"
+            android:layout_alignLeft="@+id/m_70"
+            android:layout_alignStart="@+id/m_70" />
+
+        <ToggleButton
+            android:id="@+id/m_74"
+            android:layout_width="100dp"
+            android:layout_height="100dp"
+            android:background="@drawable/button_background"
+            android:drawableTop="@drawable/fruit_tangerines"
+            android:gravity="center_vertical"
+            android:textOn="С.пудра"
+            android:textOff="С.пудра"
+            android:textSize="14dp"
+            android:textAlignment="center"
+            android:textColor="@color/color"
+            android:onClick="onToggleButtonClick"
+            android:checked="false"
+            android:layout_below="@+id/m_71"
+            android:layout_alignParentLeft="true"
+            android:layout_alignParentStart="true"
+            android:layout_marginTop="35dp" />
+
+        <ToggleButton
+            android:id="@+id/su_58"
+            android:layout_width="100dp"
+            android:layout_height="100dp"
+            android:background="@drawable/button_background"
+            android:drawableTop="@drawable/fruit_tangerines"
+            android:gravity="center_vertical"
+            android:textOn="Сода"
+            android:textOff="Сода"
+            android:textSize="14dp"
+            android:textAlignment="center"
+            android:textColor="@color/color"
+            android:onClick="onToggleButtonClick"
+            android:checked="false"
+            android:layout_alignTop="@+id/m_74"
+            android:layout_alignLeft="@+id/m_72"
+            android:layout_alignStart="@+id/m_72" />
+
+        <ToggleButton
+            android:id="@+id/su_59"
+            android:layout_width="100dp"
+            android:layout_height="100dp"
+            android:background="@drawable/button_background"
+            android:drawableTop="@drawable/fruit_tangerines"
+            android:gravity="center_vertical"
+            android:textOn="Уксус"
+            android:textOff="Уксус"
+            android:textSize="14dp"
+            android:textAlignment="center"
+            android:textColor="@color/color"
+            android:onClick="onToggleButtonClick"
+            android:checked="false"
+            android:layout_alignTop="@+id/m_74"
+            android:layout_alignParentRight="true"
+            android:layout_alignParentEnd="true" />
 
         <Button
             style="?android:attr/buttonStyleSmall"
